--- a/DockerNodeAPI/package.json
+++ b/DockerNodeAPI/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DockerNodeAPI",
+  "name": "nodeapi",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,22 +8,20 @@
     "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MFRamon/DockerNodeAPI.git"
-  },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/MFRamon/DockerNodeAPI/issues"
-  },
-  "homepage": "https://github.com/MFRamon/DockerNodeAPI#readme",
-  "devDependencies": {
-    "nodemon": "^2.0.4"
-  },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.5.8"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.6",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/mongodb": "^3.5.20"
   }
 }
