--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
-version: "3"
 
+version: "3"
 services:
   reverse-proxy:
     image: jwilder/nginx-proxy:alpine
@@ -26,8 +26,6 @@ services:
     volumes:
       - "./mongodb/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro"
       - "/opt/mongodb/data/db:/data/db"
-    environment:
-      - VIRTUAL_HOST=192.168.118.128
   angular-dashboard:
     container_name: "Angular-Dashboard"
     build:
@@ -35,7 +33,7 @@ services:
       dockerfile: Dockerfile
     restart: always
     environment:
-      - VIRTUAL_HOST=192.168.118.128
+      - VIRTUAL_HOST=appramon.com
   node-api:
     container_name: "Node-API"
     ports:
@@ -44,5 +42,3 @@ services:
       context: ./DockerNodeAPI
       dockerfile: Dockerfile
     restart: always
-    environment:
-      - VIRTUAL_HOST=192.168.118.128
