--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,18 @@
 
 version: "3"
 services:
+  reverse-proxy:
+    image: jwilder/nginx-proxy:alpine
+    container_name: "Reverse-Proxy"
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      # - ./reverse_proxy.conf:/etc/nginx/conf.d/reverse_proxy.conf:ro
+      - /var/run/docker.sock:/tmp/docker.sock:ro
+      - /etc/nginx/vhost.d
+      - /usr/share/nginx/html
   mongo-db:
     image: "mongo"
     container_name: "MongoDB-Container"
@@ -30,5 +42,3 @@ services:
       context: ./DockerNodeAPI
       dockerfile: Dockerfile
     restart: always
-    environment:
-      - VIRTUAL_HOST=appramon.com
