--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,26 @@ services:
       - /var/run/docker.sock:/tmp/docker.sock:ro
       - /etc/nginx/vhost.d
       - /usr/share/nginx/html
+  angular-dashboard:
+    container_name: "Angular-Dashboard"
+    build:
+      context: ./Datacess
+      dockerfile: Dockerfile
+    restart: always
+    links:
+      - node-api
+    environment:
+      - VIRTUAL_HOST=appramon.com
+  node-api:
+    container_name: "Node-API"
+    ports:
+      - "3000:3000"
+    build:
+      context: ./DockerNodeAPI
+      dockerfile: Dockerfile
+    restart: always
+    links:
+      - mongo-db
   mongo-db:
     image: "mongo"
     container_name: "MongoDB-Container"
@@ -26,19 +46,5 @@ services:
     volumes:
       - "./mongodb/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro"
       - "/opt/mongodb/data/db:/data/db"
-  angular-dashboard:
-    container_name: "Angular-Dashboard"
-    build:
-      context: ./Datacess
-      dockerfile: Dockerfile
-    restart: always
-    environment:
-      - VIRTUAL_HOST=appramon.com
-  node-api:
-    container_name: "Node-API"
-    ports:
-      - "3000:3000"
-    build:
-      context: ./DockerNodeAPI
-      dockerfile: Dockerfile
-    restart: always
+ 
+  
